--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img title="IDK why" src="Img2.png" class="card-img-top" alt="...">
+            <img src="Img2.png" class="card-img-top" alt="...">
             <div class="card-body">
             <h5 class="card-title">Me with my sute (again).</h5>
             <p class="card-text">Yeah I have a Samsung S9+.
@@ -73,14 +73,14 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img title="RICHHH BOIIIIIIIIII" src="Img3.png" class="card-img-top" alt="...">
+            <img src="Img3.png" class="card-img-top" alt="...">
             <div class="card-body">
             <h5 class="card-title">The empty Dubai Metro</h5>
             <p class="card-text">I was in Dubai and when I went to the Expo (it already ended) site this is how the train looked from the inside.</p>
             </div>
         </div> 
         <div class="card" style="width: 385px;">
-            <img title="IDK why" src="Img4.png" class="card-img-top" alt="...">
+            <img src="Img4.png" class="card-img-top" alt="...">
             <div class="card-body">
             <h5 class="card-title">Me in a chair.</h5>
             <p class="card-text">My gaming chair is bad.
