--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section>
         <h1>Farshid Saleh Ivo's Gallery</h1>
         <div class="card" style="width: 18rem;">
-            <img title="LOL" src="Img1.png" class="card-img-top" alt="...">
+            <img src="Img1.png" class="card-img-top" alt="...">
             <div class="card-body">
             <h5 class="card-title">Me with my sute</h5>
             <p class="card-text">Yeah I have a Samsung S9+.
