--- a/index.html
+++ b/index.html
@@ -2,96 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farshid Saleh Ivo</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap" rel="stylesheet">  
 </head>
-<body class="container">
+<body>
+    <header>
+        <div class="hamburger" id="hamburgerMenu">
+            <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+        </div>
+        <ul class="tBar" id="navbar">
+            <li><a class="tBarObject" href="index.html">Farshid Saleh Ivo</a></li>
+        </ul>
+    </header>
+
     <section>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4MZccxx2GtyuHv8za5zvLz?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark rounded container mt-2">
-            <div class="container-fluid">
-                <ul class="navbar-nav" style="padding-left: 350px;">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="https://fsi001.github.io/miwabsite/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://fsi001.github.io/miwabsite/">Contacts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">More about me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Socials</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">This site is under construction.</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </section>
-    <section>
-        <h1 >Who am I?</h1>
-        <p >My name is Farshid Saleh Ivo, currently living in Iraq but I am from
-         <a class="ahe" href="https://www.google.com/search?gs_ssp=eJzj4tDP1TcwNDNKMmD04kpKzEvPSUxJLc4AAEJoBpc&client=opera-gx&q=bangladesh&sourceid=opera&ie=UTF-8&oe=UTF-8">Bangladesh.</a> I am 12 years old and I am currently learning HTML and CSS. I am a student in grade 6 in <a class="ahe" href="https://eis.edu.iq"><p title="This is my school.">EISB.</p></a>I also like football/soccer.</p>
-    </section>
-    <section>
-        <h1>My experiance</h1>
-        <p>I am a student in grade 6, so I really don’t have experience, but I know <a class="ahe" href="https://www.google.com/search?client=opera-gx&q=HTML&sourceid=opera&ie=UTF-8&oe=UTF-8">HTML</a>, <a class="ahe" href="https://www.google.com/search?client=opera-gx&q=CSS&sourceid=opera&ie=UTF-8&oe=UTF-8">CSS</a> and a little bit of <a class="ahe" href="https://www.google.com/search?client=opera-gx&q=bootstrap&sourceid=opera&ie=UTF-8&oe=UTF-8">Bootstrap</a></p>
-    </section>
-    <br>
-    <hr>
-    <br>
-    <section>
-        <h1>Farshid Saleh Ivo's Gallery</h1>
-        <div class="card" style="width: 18rem;">
-            <img src="Img1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title">Me with my sute</h5>
-            <p class="card-text">Yeah I have a Samsung S9+.
-            <br>
-                <br>
-                <br>
-                <br></p>
+        <div class="fContainer">
+            <div class="fContainerDiv1"><img width="100%" src="img1.png" alt="Image"></div>
+            <div class="containerText">
+                <h2>Who am I?</h2>
+                <p>My name is Farshid Saleh Ivo, I'm 14 years old and I like to make websites. Fun fact: I have more than 2 websites just like this one lol. Anyways, I am also on <a target="_blank" href="https://www.fiverr.com/yoyofsi?public_mode=true">Fiverr</a>. Also, don't hesitate to hire me for the gigs that are available!</p>
+                <h2>Where am I from?</h2>
+                <p>I am from a small country called <a target="_blank" href="https://g.co/kgs/AGT8WRP">Bangladesh</a>. I currently reside in <a target="_blank" href="https://g.co/kgs/2f6SWPi">Dhaka</a>.</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="Img2.png" class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title">Me with my sute (again).</h5>
-            <p class="card-text">Yeah I have a Samsung S9+.
-                <br>
-                <br>
-                <br>
-                <br></p>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="Img3.png" class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title">The empty Dubai Metro</h5>
-            <p class="card-text">I was in Dubai and when I went to the Expo (it already ended) site this is how the train looked from the inside.</p>
-            </div>
-        </div> 
-        <div class="card" style="width: 385px;">
-            <img src="Img4.png" class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title">Me in a chair.</h5>
-            <p class="card-text">My gaming chair is bad.
-                <br>
-                <br>
-                <br>
-                <br></p>
-            </div>
-        </div>       
     </section>
 
+    <section>
+        <div class="sContainer">
+            <div class="containerText">
+                <h2>Social media</h2>
+                <div>
+                    <p><a target="_blank" href="https://www.youtube.com/@yoyoFSI?app=desktop"><i class="fa-brands fa-youtube"></i> - yoyoFSI</a> | <span class="sub-count">234</span> Subscribers <i class="fa-solid fa-bolt" style="color: #FFD43B;"></i></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
